# Concise-1

./: Dockerfile  README.md  concise.py  concise_benchmark.py  generate_transactional_file.py  getMetrics.py  get_density.py  launch-prod.ps1  launch-prod.sh  paper_example.txt  quality_cover.py  quality_cover_benchmark.py  test.txt  trans50x5000.data
BenchmarkOutput/: ac_90k.dat.stats
Density/: paper_example.txt
Template/: Bitset_Concept.cpp  Bitset_Concept.hpp  CMakeLists.txt  DataConverter.cpp  DataConverter.hpp  Logger.cpp  Logger.hpp  QCRunner.cpp  QCRunner.hpp  Runner.cpp  Runner.hpp  ThreadPool.hpp  TransactionalDataParser.cpp  TransactionalDataParser.hpp  config.hpp  main.cpp
